# hroot

./: README.md  build.hacker  build.hl  update.hacker
config/: version.hacker
config/safety-settings/: usr.bin.apt  usr.bin.dpkg  usr.bin.hammer
source-code/: Cargo.toml  main.go  shard.yml
source-code/builder/: Cargo.toml  main.go  shard.yml
source-code/builder/src/: main.cr  main.rs
source-code/cli/: Cargo.toml  shard.yml
source-code/cli/src/: main.cr  main.rs  main.ts
source-code/container/src/: main.cr
source-code/containers/: Cargo.toml
source-code/containers/src/: main.cr  main.rs
source-code/core/: Cargo.toml  shard.yml
source-code/core/src/: lib.rs  main.cr  main.rs
source-code/progress-bar/src/: main.rs
source-code/read/: Cargo.toml
source-code/read/src/: main.cr  main.rs
source-code/src/: main.cr
source-code/tui/: go.mod  main.go
source-code/updater/: Cargo.toml  shard.yml
source-code/updater/src/: main.cr  main.rs
