[workspace]
members = [
    "cli",
    "core",
    "updater",
    "builder",
    "read"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
lexopt = "0.3"
owo-colors = "3.5"
indicatif = "0.17"
chrono = "0.4"
nix = { version = "0.27", features = ["user", "mount", "fs"] }
tempfile = "3.8"
ostree = "0.16"
regex = "1.10"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2.4"
