[package]
name = "hammer"
version = "0.9.0"
edition = "2021"
description = "Hammer CLI Tool for HackerOS Atomic"
authors = ["HackerOS Team <hackeros068@gmail.com>"]  

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
owo-colors = "4.0.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
semver = "1.0.23"
miette = { version = "7.2.0", features = ["fancy"] }
