[package]
name = "hammer-containers"
version = "1.0.0"
edition = "2021"

[dependencies]
hammer-core = { path = "../core" }
anyhow = { workspace = true }
miette = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
