[package]
name = "hammer-core"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
owo-colors = { workspace = true }
chrono = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
nix = { workspace = true }
walkdir = "2.4"
