[package]
name = "hammer-updater"
version = "1.0.0"
edition = "2021"

[dependencies]
hammer-core = { path = "../core" }
anyhow = { workspace = true }
miette = { workspace = true }
clap = { workspace = true }
owo-colors = { workspace = true }
indicatif = { workspace = true }
chrono = { workspace = true }
dialoguer = { workspace = true }
